branch created to text alternative approch

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1>What Epicodus Track Should I Choose?</h1>
           <div class="radio">
             <h5>Would you rather work on the front-end or the back-end side of development?</h5>
-            <input type="radio" name="question1" value="front"> Front-end development sounds more like my style.<br>
-            <input type="radio" name="question1" value="back"> Back-end development is what I'm looking for.<br>
+            <input type="radio" name="question1" value="A"> Front-end development sounds more like my style.<br>
+            <input type="radio" name="question1" value="B"> Back-end development is what I'm looking for.<br>
           </div>
           <div class="radio">
             <h5>What kind of company would you prefer to work for?</h5>
@@ -40,7 +40,7 @@
             <input type="radio" name="question5" value="B"> I'd like to learn one of the most popular languages, but it doen't need to be #1.<br>
             <input type="radio" name="question5" value="C"> I'm fine learning one of the less popular languages if it has other advantages.<br>
           </div>
-          <button type="submit" class="btn btn-info">Submit</button>
+          <button type="submit" name="subBtn" id="subBtn btn-info">Submit</button>
       <p>Your programing track is: <span id="language"></span>.</p>
     </form>
   </body>
