--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1>What Epicodus Track Should I Choose?</h1>
           <div class="radio">
             <h5>Would you rather work on the front-end or the back-end side of development?</h5>
-            <input type="radio" name="question1" value="front"> Front-end development sounds more like my style.<br>
-            <input type="radio" name="question1" value="back"> Back-end development is what I'm looking for.<br>
+            <input type="radio" name="question1" value="A"> Front-end development sounds more like my style.<br>
+            <input type="radio" name="question1" value="B"> Back-end development is what I'm looking for.<br>
           </div>
           <div class="radio">
             <h5>What kind of company would you prefer to work for?</h5>
