--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Choose a Track</title>
   </head>
   <body>
+    <div class="container">
     <form id="trackQuestions">
       <h1>What Epicodus Track Should I Choose?</h1>
           <div class="radio">
@@ -43,5 +44,6 @@
           <button type="submit" name="subBtn" id="subBtn btn-info">Submit</button>
       <p>Your programing track is: <span id="language"></span>.</p>
     </form>
+    </div>
   </body>
 </html>
