Add images and refresh button

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             <input type="radio" name="question5" value="C"> I'm fine learning one of the less popular languages if it has other advantages.<br>
           </div>
           <button type="submit" name="subBtn" class="btn btn-primary btn-lg btn-block">Submit</button>
+          <button type="reset" name="reBtn" class="btn btn-success btn-lg btn-block">Refresh</button>
         </form>
             <div class="panel panel-default">
               <div class="panel-body">
-                <div class="row">
-                  <div class="col-md-10">
-                    <p>Our track suggestion for you is: <span id="language"></span>.</p>
-                  </div>
-                <div class="col-md-2">
-                  <img src="img/csslogo.jpg" class="logoImage" weight="100px" height="100px">
-                </div>
+                  <p>Our track suggestion for you is: <span id="language"></span>.</p>
+                  <img id="cssLogo" src="img/csslogo.jpg" weight="100px" height="100px">
+                  <img id="csharpLogo" src="img/csharplogo.png" weight="100px" height="100px">
+                  <img id="javaLogo" src="img/java.jpg" weight="100px" height="100px">
+                  <img id="phpLogo" src="img/php.png" weight="100px" height="100px">
+                  <img id="rubyLogo" src="img/ruby.png" weight="100px" height="100px">
               </div>
             </div>
           </div>
